Make default color blue, add aria, fix list name getting squashed

--- a/todo-app/src/Components/AddItem.css
+++ b/todo-app/src/Components/AddItem.css
@@ -1,5 +1,5 @@
 .addItem {
-  background-color: #414141;
+  background-color: #2274A5;
   position: fixed;
   border: none;
   color: white;
