--- a/todo-app/src/Components/ListCard.css
+++ b/todo-app/src/Components/ListCard.css
@@ -14,9 +14,8 @@
   display: grid;
   grid-template-columns: 40px 1fr 40px 60px 50px;
   padding: 5px;
-  font-size: 20px;
+  font-size: 18px;
   cursor: pointer;
-  height: 36px;
 }
 
 .listNameInput {
@@ -29,6 +28,14 @@
   resize: none;
 }
 
+.linkButton {
+  display: inline-flex;
+  align-items: top;
+  background-color: transparent;
+  text-decoration: underline;
+  padding-top: 9px;
+}
+
 .listName {
   width: 100%;
   padding: 5px;
@@ -36,15 +43,11 @@
 }
 
 .deleteButton {
-  background-color: transparent;
   color: rgb(221, 94, 94);
-  text-decoration: underline;
 }
 
 .editButton {
-  background-color: transparent;
   color: rgb(49, 49, 209);
-  text-decoration: underline;
 }
 
 .openButton {
@@ -62,19 +65,16 @@
   opacity: 0;
 }
 
-.listEmoji {
-  text-align: center;
+.listCardLeftPanel {
   border-right: 1px solid rgb(221, 221, 221);
 }
 
 .colorPickerDiv {
   position: absolute;
-  /* border: 1px solid rgb(216, 216, 216); */
+  border: 1px solid rgb(216, 216, 216);
   border-radius: 8px;
   margin-top: 5px;
   margin-left: 4px;
-  /* bottom: 0;
-  left: 0; */
 }
 
 .colorDropdown {
@@ -84,8 +84,9 @@
   border-radius: 5px;
   font-size: 13px;
   font-weight: bold;
-  margin-right: 5px;
-  margin-top: 6px;
+  margin-left: 5px;
+  margin-top: 5px;
+  cursor: pointer;
 }
 
 .dropDownArrow {
