--- a/todo-app/src/Components/ListSideMenu.css
+++ b/todo-app/src/Components/ListSideMenu.css
@@ -20,6 +20,7 @@
   border-radius: 5px;
   margin-bottom: 10px;
   display: block;
+  cursor: pointer;
 }
 
 .leftArrow {
