--- a/todo-app/src/Components/ListViewer.css
+++ b/todo-app/src/Components/ListViewer.css
@@ -1,9 +1,10 @@
 .header {
   text-align: center;
+  padding-top: 30px;
 }
 
 .header > h3 {
-  margin-top: 30px;
+  margin-top: 0;
   margin-bottom: 20px;
 }
 
